@@ -1,6 +1,7 @@
 2006-12-13  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* timidity/flac_a.c: merge patch from FLAC team.
+	* interface/xaw_i.c: merge patch fixing gcc4 compilation problem.
 
 2006-07-27  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>
 
